<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/uims_background"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:background="#af000000"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_portal"
            android:gravity="center"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:textColor="#ffffff"
            android:background="@color/colorPrimary"
            android:textSize="20sp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:padding="20dp"
            android:gravity="center"
            android:background="#cfffffff"
            android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/user_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_id"
                    android:inputType="text"
                    android:padding="15dp"
                    android:maxLength="10"
                    />

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:padding="15dp"
                    android:maxLength="50"
                    />

            <Button
                android:layout_width="150dp"
                android:layout_height="45dp"
                android:background="@drawable/login_btn"
                android:text="@string/login_btn_name"
                android:textColor="@color/white"
                android:layout_marginTop="20dp"
                android:onClick="loginUser" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>