<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/transparent"
    android:gravity="center"
    android:padding="20dp"
    >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/grey"
    android:padding="20dp"
    android:gravity="center">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Set up Details"
        android:gravity="center_horizontal"
        android:textStyle="bold"
        android:textColor="@color/dark"
        android:padding="10dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/dark"
        android:layout_marginBottom="10dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:weightSum="3"
        android:gravity="center"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_date"
            android:textColor="@color/dark"
            android:layout_marginEnd="10dp"/>
        <TextView
            android:layout_weight="3"
            android:id="@+id/selected_date"
            android:layout_width="0dp"
            android:textColor="@color/dark"
            android:layout_height="wrap_content"
            android:gravity="center" />
        <ImageButton
            android:id="@+id/choose_date"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_date"
            android:elevation="6dp"
            android:background="@drawable/btn_outline_round"
            android:textColor="@color/white"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:weightSum="3"
        android:orientation="horizontal">
        <TextView
            android:layout_weight="1.5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_branch"
            android:textColor="@color/dark"
            android:layout_marginEnd="10dp"/>
        <Spinner
            android:layout_weight="1.5"
            android:id="@+id/branch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:popupBackground="@color/dark"
            android:spinnerMode="dropdown"
            android:entries="@array/branch"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:weightSum="3"
        android:orientation="horizontal">
        <TextView
            android:layout_weight="1.5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_semester"
            android:textColor="@color/dark"
            android:layout_marginEnd="10dp"/>
        <Spinner
            android:layout_weight="1.5"
            android:id="@+id/semester"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:popupBackground="@color/dark"
            android:spinnerMode="dropdown"
            android:entries="@array/semester"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:weightSum="3"
        android:orientation="horizontal">
        <TextView
            android:layout_weight="1.5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_section"
            android:textColor="@color/dark"
            android:layout_marginEnd="10dp"/>
        <Spinner
            android:layout_weight="1.5"
            android:id="@+id/section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:popupBackground="@color/dark"
            android:spinnerMode="dropdown"
            android:entries="@array/sections"/>
    </LinearLayout>

    <Button
        android:id="@+id/set_data"
        android:layout_width="150dp"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/login_btn"
        android:text="@string/done"
        android:textColor="@color/white"/>

</LinearLayout>
</LinearLayout>